# ecomAgentOS

./: .env.example  .gitignore  ARCHITECTURE.md  Agnes_API_Key.md  PORT_CONFIG.md  docker-compose.yml  多Agent电商自主运营系统-完整开发文档.md  重写开发计划.md
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/agents/: __init__.py  ads_agent.py  base.py  cs_agent.py  image_agent.py  inventory_agent.py  orchestrator.py  pricing_agent.py  selection_agent.py  video_agent.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init.py  c7a680450fab_init_core_tables.py
backend/api/: __init__.py  admin.py  shops.py  tasks.py  websocket.py
backend/app/: main.py
backend/app/core/: config.py  llm.py  logging.py
backend/app/db/: __init__.py  base.py  dependencies.py  session.py
backend/app/models/: __init__.py  agent_runs.py  agent_steps.py  ai_usage_log.py  approval_policies.py  approval_requests.py  orders.py  platform_adapters.py  price_history.py  product_snapshots.py  products.py  refund_orders.py  shops.py  skus.py  (+2 more)
backend/config/: comfyui.py  llm.py
backend/db/: database.py  init.sql
backend/models/: approval.py  product.py  shop.py  subscription.py  task.py
backend/rpa/: __init__.py  browser_pool.py  error_handler.py  stealth_config.py  wechat_vm.py
backend/tasks/: __init__.py  celery_app.py  scheduled.py
backend/tests/: conftest.py  test_config.py  test_health.py  test_llm_service.py  test_models.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+55 files in other folders)
