[project]
name = "ecomagentos-backend"
version = "0.1.0"
description = "ecomAgentOS FastAPI backend core"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0,<0.140.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["UP017"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
