[package]
name = "ecom-agent-desktop"
version = "1.0.0"
description = "多Agent电商自主运营系统 - 桌面端"
authors = ["ecom-agent-team"]
edition = "2021"

[lib]
name = "ecom_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
